# nndb

./: .gitignore  CLAUDE.md  README.md
database/: Cargo.toml  README.md
database/examples/: analyze_misses.rs
database/scripts/: disk-bench.sh  download-sift.sh  fetch-cohere.py
database/src/: eval.rs  fvecs.rs  lib.rs  main.rs  quant.rs  search.rs
history/: 001-exact-brute-force-baseline.json  001-exact-brute-force-baseline.md  001-what-we-did.md  002-what-we-did.json  002-what-we-did.md  003-query-batching.json  003-query-batching.md  004-cascadelake-avx512.md  005-bound-detection.md  005-cascadelake-bound.json  005-m3-bound.json  006-cascadelake-fma-batch.json  006-fma-kernel.md  006-m3-fma-bound.json  007-granite-batch.json  007-granite-bound.json  007-granite-rapids.md  008-granite-f32.json  009-binary-rerank.md  010-asymmetric.json  010-asymmetric.md  011-asym-lut.json  012-popcount-autovectorizes.json  012-popcount-autovectorizes.md  013-counting-selection.json  013-counting-selection.md  014-prefix-scan.md  015-int8-rerank-tier.json  015-int8-rerank-tier.md  016-tiled-binary-scan.md  019-serving-latency-knob.json  019-serving-latency-knob.md  020-capstone.md  021-intra-query-parallel.json  022-parallel-rerank.json  023-register-tiled-kernel.json  023-register-tiled-kernel.md  026-rabitq-rotation.json  026-rabitq-rotation.md  027-rotation-rescues-prefix.md  (+53 more)
infra/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
nndb/: Cargo.toml  README.md
nndb/.cargo/: config.toml
nndb/examples/: analyze_misses.rs  count_unique_codes.rs
nndb/scripts/: download-sift.sh  fetch-cohere.py  fetch-nomic.py  fetch-openai-dbpedia.py  fetch-snowflake.py
nndb/src/: eval.rs  fvecs.rs  main.rs  quant.rs
notes/: 002-networked-serving.md  004-cascadelake-avx512.json  006-cascadelake-fma-bound.json  008-granite-i8.json  008-int8-quantization.md  009-binary-rerank.json  011-asym-lut.md  014-prefix-scan.json  016-tiled-binary-scan.json  017-serving-the-winner.json  017-serving-the-winner.md  018-combined-pareto.json  018-combined-pareto.md  020-capstone.json  021-intra-query-parallel.md  022-parallel-rerank.md  024-rerank-prefetch.json  024-rerank-prefetch.md  025-latency-floor.json  025-latency-floor.md  027-rotation-rescues-prefix.json  028-rabitq-estimator.json  031-adsampling.json  031-adsampling.md  032-pdx-layout.json  032-pdx-layout.md  033-pdx-adsampling.json  033-pdx-adsampling.md  034-adsampling-rerank-stack.md  035-research-capstone-2.md  038-tile-retune.md  039-carousel-scan-sharing.json  040-sharded-carousel.md  044-quantization-frontier.md  045-disk-resident-economics.md  046-cell-size-residual.json  047-scale-hierarchy-cliff.json  048-query-adaptive-funnel.json  048-query-adaptive-funnel.md  049-roofline-model.json  (+54 more)
questions/: HNSW.md  IVF.md  accelerator-gemm.md  breakout-research-loop.md  fpga-f2.md  quantization.md
resources/: 001-ann-benchmarks.md  002-rabitq.md  003-pdx-adsampling.md  004-hnsw.md  005-simd-adc-scann.md  006-binary-quant-engines.md
web/: README.md  mdx-components.tsx  next.config.ts  package-lock.json  package.json
web/app/: layout.tsx  (+2 more)
(+36 files in other folders)
